# my_old_code

./: README.md
auto_parking/: CMakeLists.txt  package.xml
auto_parking/cmake/: src_path_defination.cmake
auto_parking/config/: config.yaml  laser_obs_config.yaml
auto_parking/launch/: auto_parking.launch
auto_parking/msg/: AutoParkStatus.msg  SetAutoPark.msg
auto_parking/src/: auto_parking_node.cpp  data_utility.h  follow_path.cpp  follow_path.h  generate_path.cpp  generate_path.h  laser_obstacle_node.cpp
localization/: CMakeLists.txt  newtonM2_Readme.txt  package.xml  辅助定位说明.doc
localization/fusion/: imuPreintegration.cpp  utility.h
localization/fusion/config/: params.yaml
localization/gnss/: geo_pos_conv.cpp  geo_pos_conv.h
localization/gps/: main.cpp  serial_port.cpp  serial_port.h  serial_wrap.cpp  serial_wrap.h
localization/launch/: bringup.launch  singlegps.launch  start_waypoint.launch
localization/nmea2tfpose/: nmea2tfpose_core.cpp  nmea2tfpose_core.h  nmea2tfpose_node.cpp
localization/nodes/: ekf_advance.py  ekf_finalpose.py  ekf_imu.py  imu_init.py
localization/waypoint/: wp_core.cpp  wp_core.h  wp_node.cpp
mag_recognition/: CMakeLists.txt  package.xml
mag_recognition/config/: config.yaml  record_config.yaml  sc_config.yaml
mag_recognition/data/MagInfo/: mag_laser_3.pcd  mag_laser_4.pcd  mag_laser_6.pcd  mag_laser_7.pcd  mag_pose.txt
mag_recognition/doc/: mag_recognition使用说明.doc
mag_recognition/include/: LaserRecognition.h  SCManager.h  global_defination.h.in  mag_utility.h
mag_recognition/launch/: merge_points.launch
mag_recognition/msg/: Hinson640nData.msg
mag_recognition/record_data/MagInfo/: mag_laser_1.pcd  mag_laser_2.pcd  mag_laser_5.pcd  mag_laser_8.pcd
mag_recognition/src/: SCManager.cpp  mag_recognition_node.cpp  mag_record_node.cpp  test_node.cpp
